add ping method
